welcome.lessons.welcome.variables.Variables.scala.code
varx:Int=1
while(!estSurBiscuit){avance();}
prendBiscuit()
recule();